apps/profilarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr
spec:
  ports:
    - port: 6868
  selector:
    app: profilarr
