apps/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - profilarr.hubbe.club
      secretName: profilarr-cert
  rules:
    - host: profilarr.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profilarr
                port:
                  number: 6868
